sonarqube and docs